--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "ganti dns cloudflare",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.3.0",
+    "axios": "^0.27.2",
+    "express": "^4.18.1",
+    "fernet": "^0.4.0",
+    "json-bigint": "^1.0.0",
     "node-schedule": "^2.1.0",
     "nodejs-cloudflare-ddns-script": "^1.0.3",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "qs": "^6.11.0"
+  },
+  "devDependencies": {
+    "prisma": "^4.3.0"
   }
 }
