--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-PORT=3000
+PORT=3002
+
+RUN_DNS=false
+RUN_ABSEN=true
+
+DATABASE_URL="mysql://8z93u6x00tymlkf9fhqq:pscale_pw_ahGzfEKdy9wrAaANeErYP27rSMjzIgu9vsUvZwQ4NbF@ap-southeast.connect.psdb.cloud/absen?sslaccept=strict"
