--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ PORT=3002
 RUN_DNS=false
 RUN_ABSEN=true
 
-DATABASE_URL="mysql://i7y6hhrnq8md:pscale_pw_htkxK58AxUxWidpG7_NyzdR6H0EnCIsKICI3ri4g7Dg@icez562z8mfi.ap-southeast-2.psdb.cloud/absen?sslaccept=strict"
+DATABASE_URL="mysql://8z93u6x00tymlkf9fhqq:pscale_pw_ahGzfEKdy9wrAaANeErYP27rSMjzIgu9vsUvZwQ4NbF@ap-southeast.connect.psdb.cloud/absen?sslaccept=strict"
