--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@prisma/client": "^4.3.0",
     "axios": "^0.27.2",
-    "express": "^4.18.1",
+    "dotenv": "^16.0.2",
     "fernet": "^0.4.0",
     "json-bigint": "^1.0.0",
     "node-schedule": "^2.1.0",
