add bot absen + ping monitor

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ RUN_DNS=false
 RUN_ABSEN=true
 
 DATABASE_URL="mysql://8z93u6x00tymlkf9fhqq:pscale_pw_ahGzfEKdy9wrAaANeErYP27rSMjzIgu9vsUvZwQ4NbF@ap-southeast.connect.psdb.cloud/absen?sslaccept=strict"
+URL_PING_MONITOR = 'https://cronhub.io/ping/e1306af0-23cd-11ed-9c9d-a52cfa2f7b57'
