--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,11 @@ PORT=3002
 RUN_DNS=false
 RUN_ABSEN=true
 
+ADJUST_TIME=7
+S_DATANG=05:00:00
+E_DATANG=08:00:00
+S_PULANG=14:00:00
+E_PULANG=21:00:00
+
 DATABASE_URL="mysql://8z93u6x00tymlkf9fhqq:pscale_pw_ahGzfEKdy9wrAaANeErYP27rSMjzIgu9vsUvZwQ4NbF@ap-southeast.connect.psdb.cloud/absen?sslaccept=strict"
 URL_PING_MONITOR = 'https://cronhub.io/ping/e1306af0-23cd-11ed-9c9d-a52cfa2f7b57'
