--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,20 @@
 PORT=3002
 
-RUN_DNS=false
-RUN_ABSEN=true
+RUN_DNS=true
+RUN_DNS_SCHEDULE=false
+RUN_ABSEN=false
+
+wanIPv4Site="https://ipv4.icanhazip.com"
+cfKey="4775db5ba5ca06ae0120ed238e749ac04b07d"
+email="t.wahyu96@gmail.com"
+zoneName="agrivan.space"
+recordType="A"
+recordName="absen.agrivan.space"
 
 ADJUST_TIME=7
-S_DATANG=05:00:00
+S_DATANG=04:00:00
 E_DATANG=08:00:00
-S_PULANG=14:00:00
+S_PULANG=12:00:00
 E_PULANG=21:00:00
 
 DATABASE_URL='mysql://iooizf11fv7ovj7gyhhx:pscale_pw_qmzVW277MTaOX47Rw5bGRAxoylJOjcZVwKdup2uOUFk@ap-southeast.connect.psdb.cloud/absen?sslaccept=strict'
