--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^4.3.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.2",
+    "express": "^4.18.2",
     "fernet": "^0.4.0",
     "json-bigint": "^1.0.0",
     "node-schedule": "^2.1.0",
