--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ PORT=3002
 RUN_DNS=true
 RUN_DNS_SCHEDULE=false
 RUN_ABSEN=false
+CHECK_ABSEN=false
 
 wanIPv4Site="https://ipv4.icanhazip.com"
 cfKey="4775db5ba5ca06ae0120ed238e749ac04b07d"
