--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^8.2.0",
+    "@fastify/formbody": "^7.4.0",
     "@prisma/client": "^4.3.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.2",
