--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ E_PULANG=21:00:00
 
 DATABASE_URL='mysql://iooizf11fv7ovj7gyhhx:pscale_pw_qmzVW277MTaOX47Rw5bGRAxoylJOjcZVwKdup2uOUFk@ap-southeast.connect.psdb.cloud/absen?sslaccept=strict'
 URL_PING_MONITOR = 'https://cronhub.io/ping/e1306af0-23cd-11ed-9c9d-a52cfa2f7b57'
+
+LAST_RUN=1686900926352
