--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 PORT=3002
 
-RUN_DNS=true
+RUN_DNS=false
 RUN_DNS_SCHEDULE=false
-RUN_ABSEN=false
+RUN_ABSEN=true
 CHECK_ABSEN=false
 
 wanIPv4Site="https://ipv4.icanhazip.com"
@@ -18,7 +18,7 @@ E_DATANG=08:00:00
 S_PULANG=12:00:00
 E_PULANG=21:00:00
 
-DATABASE_URL='mysql://9cubah6up9j7pgij6sgf:pscale_pw_3sB88NWv7zXYne7nRmm8NsNSkYgjrm52rAiFO8cy8zs@aws.connect.psdb.cloud/absen?sslaccept=strict'
+DATABASE_URL='mysql://8z93u6x00tymlkf9fhqq:pscale_pw_ahGzfEKdy9wrAaANeErYP27rSMjzIgu9vsUvZwQ4NbF@aws.connect.psdb.cloud/absen?sslaccept=strict'
 URL_PING_MONITOR = 'https://cronhub.io/ping/e1306af0-23cd-11ed-9c9d-a52cfa2f7b57'
 
-LAST_RUN=1686900926352
+LAST_RUN=1687312312607
