--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ E_DATANG=08:00:00
 S_PULANG=12:00:00
 E_PULANG=21:00:00
 
-DATABASE_URL='mysql://8z93u6x00tymlkf9fhqq:pscale_pw_ahGzfEKdy9wrAaANeErYP27rSMjzIgu9vsUvZwQ4NbF@aws.connect.psdb.cloud/absen?sslaccept=strict'
+DATABASE_URL='mysql://fwcups1jyxyekr8fqeak:pscale_pw_XHxwlNKHzY5fC7WRKQ1q1stMWtIVaadSgdhZHzhe6Pz@aws.connect.psdb.cloud/absen?sslaccept=strict'
 URL_PING_MONITOR = 'https://cronhub.io/ping/e1306af0-23cd-11ed-9c9d-a52cfa2f7b57'
 
 LAST_RUN=1687312312607
