--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 PORT=3002
+DEBUG=true
 
 RUN_DNS=false
 RUN_DNS_SCHEDULE=false
@@ -18,7 +19,8 @@ E_DATANG=08:00:00
 S_PULANG=12:00:00
 E_PULANG=21:00:00
 
-DATABASE_URL='mysql://fwcups1jyxyekr8fqeak:pscale_pw_XHxwlNKHzY5fC7WRKQ1q1stMWtIVaadSgdhZHzhe6Pz@aws.connect.psdb.cloud/absen?sslaccept=strict'
+DATABASE_URL='mysql://admin:Udahlupa96@db-pamungkas.cknfy9xmeglr.ap-southeast-1.rds.amazonaws.com/absen'
 URL_PING_MONITOR = 'https://cronhub.io/ping/e1306af0-23cd-11ed-9c9d-a52cfa2f7b57'
 
-LAST_RUN=1687312312607
+LAST_RUN=1687481640011
+
