--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ RUN_DNS=false
 RUN_DNS_SCHEDULE=false
 RUN_ABSEN=true
 CHECK_ABSEN=false
+WARP=false
 
 wanIPv4Site="https://ipv4.icanhazip.com"
 cfKey="4775db5ba5ca06ae0120ed238e749ac04b07d"
