--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ RUN_DNS=false
 RUN_DNS_SCHEDULE=false
 RUN_ABSEN=true
 CHECK_ABSEN=false
+DELAY_ABSEN=true
 WARP=false
 
 wanIPv4Site="https://ipv4.icanhazip.com"
