--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,30 @@
 PORT=3002
-DEBUG=true
+DEBUG=false
 
 RUN_DNS=false
 RUN_DNS_SCHEDULE=false
 RUN_ABSEN=true
 CHECK_ABSEN=false
+
 DELAY_ABSEN=true
-WARP=false
+TIME_DELAY_ABSEN=10000
+WARP=true
 
 wanIPv4Site="https://ipv4.icanhazip.com"
 cfKey="4775db5ba5ca06ae0120ed238e749ac04b07d"
 email="t.wahyu96@gmail.com"
-zoneName="agrivan.space"
+zoneName="bpkp.site"
 recordType="A"
-recordName="absen.agrivan.space"
+recordName="map.bpkp.site"
 
 ADJUST_TIME=7
 S_DATANG=04:00:00
 E_DATANG=08:00:00
-S_PULANG=12:00:00
+S_PULANG=11:00:00
 E_PULANG=21:00:00
 
 DATABASE_URL='mysql://admin:Udahlupa96@db-pamungkas.cknfy9xmeglr.ap-southeast-1.rds.amazonaws.com/absen'
 URL_PING_MONITOR = 'https://cronhub.io/ping/e1306af0-23cd-11ed-9c9d-a52cfa2f7b57'
 
-LAST_RUN=1687481640011
+LAST_RUN=1687504469554
 
