--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ E_DATANG=08:00:00
 S_PULANG=11:00:00
 E_PULANG=21:00:00
 
-DATABASE_URL='mysql://admin:Udahlupa96@db-pamungkas.cknfy9xmeglr.ap-southeast-1.rds.amazonaws.com/absen'
+DATABASE_URL='mysql://root:Udahlupa96@ec2-13-250-38-0.ap-southeast-1.compute.amazonaws.com/absen'
 URL_PING_MONITOR = 'https://cronhub.io/ping/e1306af0-23cd-11ed-9c9d-a52cfa2f7b57'
 
 LAST_RUN=1687504469554
