--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fastify/formbody": "^7.4.0",
     "@fastify/http-proxy": "^9.3.0",
     "@prisma/client": "^5.7.0",
-    "axios": "^0.27.2",
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.2",
     "fastify": "^4.12.0",
     "fernet": "^0.4.0",
