add auto simpeg

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ DEBUG=false
 RUN_DNS=false
 RUN_DNS_SCHEDULE=false
 RUN_ABSEN=true
+ABSEN_MAP=false
+ABSEN_SIMPEG=true
 CHECK_ABSEN=false
 
 DELAY_ABSEN=true
